--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,21 +1,17 @@
-image: odoo:latest
+image: python:3.8.5
 
 stages:
-  - build
   - test
 
-cache:
-  paths:
-    - node_modules/
-
-install_dependencies:
-  stage: build
-  script:
-    - npm install
-  artifacts:
-    paths:
-      - node_modules/
-
-test_with_lab:
+code-check:
+  except:
+    - /^.*\.0$/
   stage: test
-  script: npm test
+  variables:
+    PRE_COMMIT_HOME: ${CI_PROJECT_DIR}/.cache/pre-commit
+  cache:
+    paths:
+      - ${PRE_COMMIT_HOME}
+  script:
+    - pip3 install pre-commit
+    - pre-commit run --all-files
